--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <!-- Interactive Social Links -->
             <div class="social-links-container">
                 <div class="social-links">
-                    <a href="https://www.facebook.com/tgwuyzz" class="social-link facebook" data-tooltip="Follow me on Facebook">
+                    <a href="https://trangiahuydeveloper.github.io/profile/" class="social-link facebook" data-tooltip="Follow me on Facebook">
                         <div class="social-icon-wrapper">
                             <i class="fab fa-facebook-f"></i>
                             <div class="ripple-effect"></div>
@@ -78,7 +78,7 @@
                         <span class="social-text">Facebook</span>
                     </a>
                     
-                    <a href="https://coronet.eu.com/" class="social-link tiktok" data-tooltip="Check my TikTok">
+                    <a href="https://trangiahuydeveloper.github.io/profile/" class="social-link tiktok" data-tooltip="Check my TikTok">
                         <div class="social-icon-wrapper">
                             <i class="fab fa-tiktok"></i>
                             <div class="ripple-effect"></div>
@@ -86,7 +86,7 @@
                         <span class="social-text">TikTok</span>
                     </a>
                     
-                    <a href="https://coronet.eu.com/" class="social-link zalo" data-tooltip="Chat on Youtube">
+                    <a href="https://trangiahuydeveloper.github.io/profile/" class="social-link zalo" data-tooltip="Chat on Youtube">
                         <div class="social-icon-wrapper">
                             <!-- <img width="40" src="./zalo.png" alt="Zalo" class="zalo-icon"> -->
                              <i class="fab fa-youtube"></i>
@@ -242,3 +242,4 @@
 </body>
 
 </html>
+
