--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
                         </div>
                         <div class="badge">
                             <i class="fas fa-paint-brush"></i>
-                            <span>Designer</span>
+                            <span>C# Developer | ImGui Overlay Maker</span>
                         </div>
                         <div class="badge">
                             <i class="fas fa-camera"></i>
-                            <span>Creator</span>
+                            <span>Anti Math </span>
                         </div>
                     </div>
                 </div>
@@ -242,4 +242,5 @@
 </body>
 
 </html>
+
 
